<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignParentBottom="true"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context="com.example.hitbtc.fragments.DetailsCurrencyFragment">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/last_title"
                    style="@style/TextTitleCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/last" />

                <TextView
                    android:id="@+id/last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/last_title"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    tools:text="100000000" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/last"
                    android:layout_centerHorizontal="true"
                    tools:text="Time" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:weightSum="2">

                <TextView
                    style="@style/TextTitleCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/ask" />

                <TextView
                    style="@style/TextTitleCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/bid" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/ask"
                    style="@style/TextRates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    tools:text="0.00000023434" />

                <TextView
                    android:id="@+id/bid"
                    style="@style/TextRates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    tools:text="0.00000023434" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/green300"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/last_24_hours"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green50"
                android:paddingTop="20dp"
                android:weightSum="3">

                <TextView
                    style="@style/TextTitleCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/open" />

                <TextView
                    style="@style/TextTitleCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/low" />

                <TextView
                    style="@style/TextTitleCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/high" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green50"
                android:weightSum="3">

                <TextView
                    android:id="@+id/open"
                    style="@style/TextRates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    tools:text="0.00000023434" />

                <TextView
                    android:id="@+id/low"
                    style="@style/TextRatesLow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    tools:text="0.00000023434" />

                <TextView
                    android:id="@+id/high"
                    style="@style/TextRatesHigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    tools:text="0.00000023434" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green50"
                android:paddingTop="20dp"
                android:weightSum="2">

                <TextView
                    style="@style/TextTitleCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/volume" />

                <TextView
                    style="@style/TextTitleCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/volume_quote" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green50"
                android:paddingBottom="25dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/volume"
                    style="@style/TextRates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    tools:text="0.00000023434" />

                <TextView
                    android:id="@+id/volume_quote"
                    style="@style/TextRates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    tools:text="0.00000023434" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>